Copyright (C) 2001-2024 Rob Caelers, Raymond Penners, Ray Satiro
See the end for copying conditions.

Please report Workrave bug reports. Visit our bug tracker located at:
https://github.com/rcaelers/workrave/issues

* Workrave 1.11.0-beta.15

** Follow OS dark/light mode on Windows (#529)
** Fix dark mode on Windows (#537)
** Fix translations in the exercises (#574)
** Fix issues where menu items could not be selected on Windows
** Beta channel now also receives release candidates and final releases

* Workrave 1.11.0-beta.14

** Start workrave after automatic update on Windows
** Save statistics before starting the automatic update

* Workrave 1.11.0-beta.13

** Improved handling of hibernate/suspend (#539,#540)

* Workrave 1.11.0-beta.12

** Fix installer integrity check

* Workrave 1.11.0-beta.11

** Support status icons using the StatusNotifierItem protocol (#447)
** Fix GNOME Shell 46 support (#532)
** Allow compilation without Wayland support (#523)
** Fix Wayland on KDE6 (#523)
** Fix force X11 option (#525)
** Prevent focus stealing on Windows when break window is closed

* Workrave 1.11.0-beta.10

** Fix issue where after installing an update, some files got removed after the
   first reboot.
** Fix issue where the main window is reopened after the screen is unlocked.
** Fix issue where the rest break window is opened below other Workrave windows.
** Add activity monitoring for KDE on Wayland
** Improved Wayland support on KDE (and other Wayland compositors that support
   the Layer Shell protocol)

* Workrave 1.11.0-beta.9

** Update Brazilian Portuguese translation (#512, Paulo Haddad Martim)
** Fix build on Ubuntu 20.04 and 22.04.

* Workrave 1.11.0-beta.8

** Workrave now always shows the exercises during a restbreak on the primary
   monitor

* Workrave 1.11.0-beta.7

** Fix download of automatic update
** Support HTTP proxies for automatic update downloads
** Support Unicode characters in the automatic update changelog
** Updated Translations: